Fix: Insignificant issue "Scrollbars beside categories thumbnails(with long names)!" http://piwigo.org/forum/viewtopic.php?id=16041
git-svn-id: http://piwigo.org/svn/trunk@6478 68402e56-0260-453c-a942-63ccdbb3a9ee

--- a/themes/Sylvia/theme.css
+++ b/themes/Sylvia/theme.css
@@ -431,7 +431,3 @@ tr.tagLine, fieldset.tagLetter, legend.tagLetterLegend {
 #the_page .content div.thumbnailCategory div.description {
   height:158px;
 }
-
-#the_page .content div.thumbnailCategory div.description .text {
-  height:122px !important;
-}
